--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,7 +17,7 @@
       <a class="header__logo logo" href="index.html">
         <img class="logo__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
-      <nav class="menu">
+      <nav class="header__menu menu">
         <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Открыть меню</button>
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link">Каталог товаров</a></li>
