--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
       <a class="header__logo logo" href="index.html">
         <img class="logo__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
-      <nav class="menu">
+      <nav class="header__menu menu">
         <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Открыть меню</button>
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
@@ -49,12 +49,12 @@
         </p>
         <form action="https://echo.htmlacademy.ru">
           <fieldset>
-            <legend class="form__legend">Тип</legend>
+            <legend class="form__legend form__legend-type">Тип</legend>
             <label><input type="radio" name="type" checked>Аксессуар для интерьера</label>
             <label><input type="radio" name="type">Детская игрушка</label>
           </fieldset>
           <fieldset>
-            <legend class="form__legend">Цвет</legend>
+            <legend class="form__legend form__legend-color">Цвет</legend>
             <label><input type="checkbox" checked>Белый</label>
             <label><input type="checkbox" checked>Серый</label>
             <label><input type="checkbox">«Тиффани»</label>
@@ -63,21 +63,21 @@
             <label><input type="checkbox">Оранжевый</label>
           </fieldset>
           <fieldset>
-            <legend class="form__legend">Фио</legend>
+            <legend class="form__legend form__legend-name">Фио</legend>
             <label>Имя:<input type="text" placeholder="Введите ваше имя*"></label>
             <label>Фамилия:<input type="text" placeholder="Укажите фамилию*"></label>
             <label>Отчество:<input type="text" placeholder="Отчество, если желаете"></label>
           </fieldset>
           <fieldset>
-            <legend class="form__legend">Тел</legend>
+            <legend class="form__legend form__legend-phone">Тел</legend>
             <label><input type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required></label>
           </fieldset>
           <fieldset>
-            <legend class="form__legend">E-mail</legend>
+            <legend class="form__legend form__legend-email">E-mail</legend>
             <label><input type="email" placeholder="Ваш Email*" required></label>
           </fieldset>
           <fieldset>
-            <legend class="form__legend">Доп</legend>
+            <legend class="form__legend form__legend-additionally">Доп</legend>
             <label><textarea name="form-text" id="form-text" cols="30" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea></label>
           </fieldset>
           <p class="form__require"><sup>*</sup>Поля обязательны для заполнения</p>
