--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
       <a class="header__logo logo">
         <img class="logo__image" src="https://via.placeholder.com/150x150" width="86" height="35" alt="Логотип интернет магазина Мишка">
       </a>
-      <nav class="menu">
+      <nav class="header__menu menu">
         <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Открыть меню</button>
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
@@ -193,7 +193,7 @@
       </div>
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
-        <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <a class="copyright__link button" href="https://htmlacademy.ru/intensive/adaptive">
           <img class="footer__image" src="https://via.placeholder.com/150x150" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
