--- a/12/catalog.html
+++ b/12/catalog.html
@@ -6,7 +6,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HTML Academy: Мишка - каталог</title>
+  <title>Мишка - каталог: HTML Academy</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <base href="https://htmlacademy-adaptive.github.io/976089-mishka-18/12/">
@@ -19,9 +19,13 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
+          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
         </a>
-        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
+        <button class="menu__btn" type="button" aria-label="Открыть меню">
+          <span class="menu__line"></span>
+          <span class="menu__line"></span>
+          <span class="menu__line"></span>
+        </button>
         <ul class="menu__list menu__list-catalog-order">
           <li class="menu__item"><a class="menu__link menu__link-catalog">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a></li>
@@ -36,7 +40,7 @@
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery" href="#">Бесплатная доставка по Росии</a>
+            <a class="menu__link menu__link-delivery">Бесплатная доставка по Росии</a>
           </li>
         </ul>
       </nav>
@@ -49,8 +53,8 @@
     <!-- Для ридера -->
     <h1 class="visually-hidden">Интернет-магазин Мишка - каталог товаров</h1>
 
-    <div class="title">
-      <p class="title__text page-title">Каталог товаров</p>
+    <div class="catalog__title-page">
+      <p class="catalog__page-text">Каталог товаров</p>
     </div>
 
 <!-- Секция каталога -->
@@ -59,11 +63,10 @@
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Зайчик-попрыгайчик">
+              <img class="catalog__image" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@1x.jpg 767w, img/photo-hare-tablet@1x.jpg 1149w, img/photo-hare-desktop@1x.jpg" alt="Зайчик-попрыгайчик">
                 <div class="catalog__desc">
                   <p class="catalog__title">Зайчик-попрыгайчик</p>
                 <p class="catalog__text">Рост 30 см, вес 200 г</p>
-                <hr class="catalog__line line">
                 <div class="catalog__price">
                   <p class="catalog__money">1200 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
@@ -73,11 +76,10 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Корзинка для белья">
+              <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@1x.jpg 767w, img/photo-bowl-tablet@1x.jpg 1149w, img/photo-bowl-desktop@1x.jpg" alt="Корзинка для белья">
                 <div class="catalog__desc">
                   <p class="catalog__title">Корзинка для белья</p>
                 <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
-                <hr class="catalog__line line">
                 <div class="catalog__price">
                   <p class="catalog__money">690 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
@@ -87,11 +89,10 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Большая корзина для игрушек">
+              <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@1x.jpg 767w, img/photo-toys-tablet@1x.jpg 1149w, img/photo-toys-desktop@1x.jpg" alt="Большая корзина для игрушек">
                 <div class="catalog__desc">
                   <p class="catalog__title catalog__title-basket">Большая корзина для игрушек</p>
-                <p class="catalog__text">Диаметр 30 см, высота 30 см</p>
-                <hr class="catalog__line line">
+                <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
                 <div class="catalog__price">
                   <p class="catalog__money">1500 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
@@ -104,7 +105,7 @@
               <img class="catalog__img" src="https://via.placeholder.com/150x150" width="32" height="22" alt="процес производства">
               <p class="catalog__title catalog__title-process">Процесс производства</p>
             </div>
-            <img class="catalog__video" src="https://via.placeholder.com/150x150" width="260" height="150" alt="Процесс производства">
+            <img class="catalog__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
             <p class="catalog__text catalog__text-process">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
             <button class="catalog__btn button" type="button">Сделать заказ</button>
           </li>
@@ -117,7 +118,9 @@
   <!-- Подвал сайта -->
   <footer class="footer">
     <div class="footer__inner">
-      <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
+      <a class="footer__logo-link" href="index.html">
+        <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
+      </a>
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
