--- a/12/form.html
+++ b/12/form.html
@@ -6,7 +6,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HTML Academy: Мишка - форма заказа</title>
+  <title>Мишка - форма заказа: HTML Academy</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <base href="https://htmlacademy-adaptive.github.io/976089-mishka-18/12/">
@@ -19,9 +19,13 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
+          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
         </a>
-        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
+        <button class="menu__btn" type="button" aria-label="Открыть меню">
+          <span class="menu__line"></span>
+          <span class="menu__line"></span>
+          <span class="menu__line"></span>
+        </button>
         <ul class="menu__list menu__list-catalog-order">
           <li class="menu__item"><a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link menu__link-order">Вязание на заказ</a></li>
@@ -36,7 +40,7 @@
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery" href="#">Бесплатная доставка по Росии</a>
+            <a class="menu__link menu__link-delivery">Бесплатная доставка по Росии</a>
           </li>
         </ul>
       </nav>
@@ -49,8 +53,8 @@
     <!-- Для ридера -->
     <h1 class="visually-hidden">Интернет-магазин Мишка - форма заказа</h1>
 
-    <div class="title">
-      <p class="title__text title__text-form page-title">Вязание на заказ</p>
+    <div class="form__title-page">
+      <p class="form__page-text">Вязание на заказ</p>
     </div>
 
 <!-- Секция формы заказа -->
@@ -124,7 +128,9 @@
   <!-- Подвал сайта -->
   <footer class="footer">
     <div class="footer__inner">
-      <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
+      <a class="footer__logo-link" href="index.html">
+        <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
+      </a>
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
