--- a/source/form.html
+++ b/source/form.html
@@ -96,64 +96,45 @@
             </div>
           </fieldset>
           <fieldset class="form__fieldset">
-            <legend class="form__legend form__legend-color">Цвет
-            </legend>
-            <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="white"
-                      type="checkbox" checked>Белый
-            </label>
-            <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="grey"
-                      type="checkbox" checked>Серый
-            </label>
-            <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="tiffany"
-                      type="checkbox">«Тиффани»
-            </label>
-            <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="black"
-                      type="checkbox">Черный
-            </label>
-            <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="pink"
-                      type="checkbox">Розовый
-            </label>
-            <label class="form__style-text form__text-indentation">
-              <input class="visually-hidden" name="color" value="orange"
-                      type="checkbox">Оранжевый
-            </label>
+            <legend class="form__legend form__legend-color">Цвет</legend>
+            <input class="visually-hidden" id="white" name="color" value="white" type="checkbox" checked>
+            <label class="form__style-text form__text-indentation" for="white">Белый</label>
+            <input class="visually-hidden" id="gray" name="color" value="grey" type="checkbox" checked>
+            <label class="form__style-text form__text-indentation" for="gray">Серый</label>
+            <input class="visually-hidden" id="tiffany" name="color" value="tiffany" type="checkbox">
+            <label class="form__style-text form__text-indentation" for="tiffany">«Тиффани»</label>
+            <input class="visually-hidden" id="black" name="color" value="black" type="checkbox">
+            <label class="form__style-text form__text-indentation" for="black">Черный</label>
+            <input class="visually-hidden" id="pink" name="color" value="pink" type="checkbox">
+            <label class="form__style-text form__text-indentation" for="pink">Розовый</label>
+            <input class="visually-hidden" id="orange" name="color" value="orange" type="checkbox">
+            <label class="form__style-text form__text-indentation" for="orange">Оранжевый</label>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-name">Фио</legend>
-            <label class="form__style-text form__text-mb">Имя:
-              <input class="form__placeholder" type="text"
-                      placeholder="Введите ваше имя*">
-            </label>
-            <label class="form__style-text form__text-mb">Фамилия:
-              <input class="form__placeholder" type="text"
-                      placeholder="Укажите фамилию*">
-            </label>
-            <label class="form__style-text form__text-mb">Отчество:
-              <input class="form__placeholder" type="text"
-                      placeholder="Отчество, если желаете">
-            </label>
+            <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
+            <input class="form__placeholder" id="first-name" type="text" placeholder="Введите ваше имя*">
+            <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
+            <input class="form__placeholder" id="last-name" type="text" placeholder="Укажите фамилию*">
+            <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
+            <input class="form__placeholder" id="father-name" type="text" placeholder="Отчество, если желаете">
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-phone">Тел</legend>
-            <label>
-              <input class="form__placeholder" type="tel" pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
-            </label>
+            <label for="number-phone"></label>
+            <input class="form__placeholder" id="number-phone" type="tel" pattern="2[0-9]{3}-[0-9]{3}"
+                    placeholder="+7 XXX XXX XX XX*" required>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-email">E-mail</legend>
-            <label>
-              <input class="form__placeholder" type="email" placeholder="Ваш Email*" required>
-            </label>
+            <label for="email"></label>
+            <input class="form__placeholder" id="email" type="email" placeholder="Ваш Email*" required>
           </fieldset>
           <fieldset class="form__fieldset">
             <legend class="form__legend form__legend-additionally">Доп</legend>
             <label>
-              <textarea class="form__textarea-text" name="form-text" id="form-text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <textarea class="form__textarea-text" name="form-text" id="form-text"
+                          placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </label>
           </fieldset>
           <small class="form__require"><sup>*</sup>Поля обязательны для заполнения</small>
